WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195581
Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-*-event-exception.html are failing
https://bugs.webkit.org/show_bug.cgi?id=195581
Summary
Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-*-event-exception....
Sihui Liu
Reported
2019-03-11 16:53:52 PDT
Uncaught exceptions should be handled after IDBRequest dispatches events.
Attachments
Patch
(12.12 KB, patch)
2019-03-11 18:12 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-highsierra
(2.69 MB, application/zip)
2019-03-11 19:27 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews112 for mac-highsierra
(2.48 MB, application/zip)
2019-03-11 20:32 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.62 KB, patch)
2019-03-12 08:13 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-03-11 18:12:42 PDT
Created
attachment 364327
[details]
Patch
EWS Watchlist
Comment 2
2019-03-11 19:27:02 PDT
Comment on
attachment 364327
[details]
Patch
Attachment 364327
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11464965
New failing tests: imported/w3c/web-platform-tests/IndexedDB/fire-success-event-exception.html imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html
EWS Watchlist
Comment 3
2019-03-11 19:27:04 PDT
Created
attachment 364334
[details]
Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4
2019-03-11 20:32:30 PDT
Comment on
attachment 364327
[details]
Patch
Attachment 364327
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11465423
New failing tests: imported/w3c/web-platform-tests/IndexedDB/fire-success-event-exception.html imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html
EWS Watchlist
Comment 5
2019-03-11 20:32:32 PDT
Created
attachment 364343
[details]
Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
Sihui Liu
Comment 6
2019-03-12 08:13:05 PDT
Created
attachment 364388
[details]
Patch
WebKit Commit Bot
Comment 7
2019-03-12 12:36:53 PDT
Comment on
attachment 364388
[details]
Patch Clearing flags on attachment: 364388 Committed
r242818
: <
https://trac.webkit.org/changeset/242818
>
WebKit Commit Bot
Comment 8
2019-03-12 12:36:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2019-03-12 12:37:20 PDT
<
rdar://problem/48818801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug