Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-*-event-exception.html are failing https://bugs.webkit.org/show_bug.cgi?id=195581

LayoutTests/imported/w3c:

Updated test expectations to PASS.

Reviewed by Brady Eidson.

* web-platform-tests/IndexedDB/fire-error-event-exception-expected.txt:
* web-platform-tests/IndexedDB/fire-success-event-exception-expected.txt:
* web-platform-tests/IndexedDB/fire-upgradeneeded-event-exception-expected.txt:

Source/WebCore:

Reviewed by Brady Eidson.

Uncaught exceptions should be handled after IDBRequest dispatches events so that IDBTransaction would stay
active during event dispatch.

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::dispatchEvent):
(WebCore::IDBRequest::uncaughtExceptionInEventHandler):
* Modules/indexeddb/IDBRequest.h:


Canonical link: https://commits.webkit.org/209946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242818 268f45cc-cd09-0410-ab3c-d52691b4dbfc